--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,12 @@ h3 {
 strong {
     font-weight: bold;
 }
+
+ul {
+    list-style-type: disc;
+    margin-left: 1.5rem;
+}
+
+li {
+    margin-bottom: 0.5rem;
+}
